--- a/Jour03/job02/style03.02.css
+++ b/Jour03/job02/style03.02.css
@@ -1,6 +1,12 @@
+* {
+ 	box-sizing: border-box;
+ 	margin: 0;
+ 	padding: 0;
+}
+
 .container {
   display: flex;
-  gap: 10px;
+  /* gap: 10px; */
   margin-bottom: 20px;
 }
 img {
