--- a/Jour05/job01/style.css
+++ b/Jour05/job01/style.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -102,12 +103,13 @@ p a:hover {
     text-decoration: underline;
 }
 
-.error-message {
-    /* color: #ff6262; */
+/* .error-message {
+    /
     color: #f9ac06;
     font-size: 0.8rem;
     margin-bottom: 5px;
-}
+    */
+
 
 .logout-success {
     background: #e2ffe2;
@@ -119,8 +121,35 @@ p a:hover {
     margin: 10px auto;
     text-align: center;
 }
-.success-message {
+/* .success-message {
     color: #087408;
     font-size: 0.8rem;
     margin-bottom: 5px;
+} */
+
+/* Messages de validation */
+.form-error {
+    color: #ffcc00; /* Jaune lisible */
+    font-size: 0.8rem;
+    margin-bottom: 5px;
+    display: block;
+}
+
+/* Message d'alertes globales */
+.alert {
+    padding: 12px;
+    border-radius: 6px;
+    text-align: center;
+    margin-bottom: 15px;
+    font-weight: bold;
+}
+
+.alert.error {
+    background: #3a0d0d;
+    color: #ff6f6f;
+}
+
+.alert.success {
+    background: #0d3a20;
+    color: #61ff9d;
 }
