--- a/Jour05/job01/form.css
+++ b/Jour05/job01/form.css
@@ -7,10 +7,10 @@
 
 .error {
     font-size:14px;
-    background-color:#fff3cd;
+    
     background-color:#f8d7da;
-    color:#721c24;
-    border:1px solid #f5c6cb;
+    color:#010623;
+    border:1px solid #e05260;
 }
 
 .error-message {
