--- a/Jour05/job01/style.css
+++ b/Jour05/job01/style.css
@@ -41,7 +41,7 @@ body {
 /* Titres */
 .form-container h2 {
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 20px;    
 }
 
 /* Champs */
@@ -103,12 +103,11 @@ p a:hover {
     text-decoration: underline;
 }
 
-/* .error-message {
-    /
+.error-message {
     color: #f9ac06;
     font-size: 0.8rem;
     margin-bottom: 5px;
-    */
+}
 
 
 .logout-success {
