--- a/Jour06/job02/style.css
+++ b/Jour06/job02/style.css
@@ -1,19 +1,22 @@
+ /* CSS par défaut (écran > 1920px)  */
 body {
     background: #88c1d0;
 }
-
+/* 1680px à 1920px  */
 @media (min-width: 1680) and(max-width: 1920px) {
     body {
         background: #ffca4b;
     }
 }
 
+ /* mon écran PC 1280px à 1680px  */
 @media (min-width: 1280px) and(max-width: 1680px) {
     body {
         background: #275fa0;
     }
 }
 
+ /* 1280px et moins  */
 @media (max-width: 1280px) {
     body {
         /* background: #ffffff; */
