--- a/Jour06/job04/style06.04.css
+++ b/Jour06/job04/style06.04.css
@@ -4,26 +4,24 @@
     box-sizing: border-box;
 }
 
+html, body {
+    height: 100%;
+}
+
 body {
     width: 100%;
     height: 100vh;
-    padding: 20px;
-    gap: 20px;
+    /* padding: 20px; */
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;    
-}
-
-/* RESET BASIQUE */
-body {
-    margin: 0;
-    padding: 0;
     font-family: Arial, sans-serif;
 }
 
 /* HEADER */
 header {
+    width: 100%;
     background: #275fa0;
     padding: 10px;
     display: flex;
@@ -45,7 +43,8 @@ header {
 
 /* HAMBURGER BUTTON */
 .hamburger {
-    display: none;
+    /* display: none; */
+    display: block;
     font-size: 2rem;
     background: none;
     border: none;
@@ -53,7 +52,23 @@ header {
     cursor: pointer;
 }
 
-.section {
+main {
+    width: 100%;
+    height: calc(100vh - 60px);
+    padding: 20px;
+    gap: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    flex: 1;
+    background-color: #f0f0f0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    color: #88c1d0;
+}
+
+main .section {
     /* width: 300px; */
     height: 200px;
     font-size: 2rem;
