--- a/Jour06/job04/style06.04.css
+++ b/Jour06/job04/style06.04.css
@@ -5,6 +5,7 @@
 }
 
 html, body {
+    width: 100%;
     height: 100%;
 }
 
@@ -28,23 +29,29 @@ header {
     align-items: center;
 }
 
-.nav-links {
+nav .nav-links {
     list-style: none;
     display: flex;
-    gap: 20px;
+    align-items: center;
+    gap: 30px;
     margin: 0;
 }
 
-.nav-links a {
+nav .nav-links a {
     color: white;
     text-decoration: none;
     font-size: 1.2rem;
 }
 
+nav .nav-links a:hover {
+    text-decoration: underline;
+    color: #d1eaff;
+}   
+
 /* HAMBURGER BUTTON */
 .hamburger {
-    /* display: none; */
-    display: block;
+    display: none;
+    /* display: block; */
     font-size: 2rem;
     background: none;
     border: none;
@@ -54,18 +61,32 @@ header {
 
 main {
     width: 100%;
-    height: calc(100vh - 60px);
+    height: calc(100vh - 41.46px);
     padding: 20px;
     gap: 20px;
     display: flex;
     flex-wrap: wrap;
-    flex: 1;
+    /* flex: 1; */
     background-color: #f0f0f0;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 2rem;
     color: #88c1d0;
+}
+
+main h1 {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+main p {
+    width: 100%;
+    text-align: center;
+    /* font-size: 1.2rem; */
+    color: #333;
+    margin: 0 0 20px 0;
 }
 
 main .section {
@@ -86,17 +107,53 @@ main .section {
 
 /* 768px à 1599px = 2 sections par ligne */
 @media screen and (min-width: 768px) and (max-width: 1599px) {
-    .section {
-        flex: 1 0 45%;
+    main .section {
+        flex: 1 0 42%;
         flex-direction: row;
     }
 }
 
 /* ≥ 1600px = 4 sections par ligne */
 @media screen and (min-width: 1600px) {
-    .section {
+    main .section {
         flex: 1 0 24%;
         flex-direction: row;
 
+    }
+}
+
+/* ≤ 767px */
+@media screen and (max-width: 767px) {
+    nav {
+        display: flex;}
+
+    nav .nav-links {
+        display: none;
+        flex-direction: column;
+        background: #275fa0;
+        width: 100%;
+        padding: 10px 0;
+    }
+
+    nav .nav-links.active {
+        position: relative;
+        top: 41.46px;
+        left: 0;
+        display: flex;        
+        flex-direction: column;
+        align-items: flex-start;
+        background: #275fa0;
+        width: 200px;        
+        padding: 10px 0;
+        border-bottom: 1px solid #fff;
+    }
+
+    .hamburger {
+        display: inline-block;        
+        margin-left: auto;
+    }
+
+    .hamburger:focus {
+        outline: none;
     }
 }
